[package]
name = "carbone_cli_rs"
version = "0.1.0"
edition = "2021"
authors = ["Pascal Chenevas-Paule <pcp.dev@posteo.de>"]
description = "Simple CLI-App to generate a report and to manage templates using the API of Carbone (http://carbone.io)"

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
carbone_sdk_rs =  { git = "https://github.com/pascal-chenevas/carbone_sdk_rs.git" }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
bytes = "1.4.0"